# java-migrate

./: .gitignore  DEVTO_ARTICLE.md  README.md  pyproject.toml
src/java_migrate/: cli.py  detector.py  migrator.py  reporter.py
tests/: test_detector.py  test_reporter.py
tests/fixtures/: LegacyService.java
