[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "java-migrate"
version = "0.1.0"
description = "AI-powered Java legacy code modernization tool"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
]

[project.scripts]
java-migrate = "java_migrate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
